feat: add Prisma schema, Express routes, and middleware structure

--- a/.gitignore
+++ b/.gitignore
@@ -3,7 +3,6 @@ node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
-package-lock.json
 
 # Environment Variables
 .env
@@ -36,13 +35,9 @@ coverage/
 # Prisma
 prisma/migrations/
 
-# Uploads (if storing files locally)
-uploads/
-*.jpg
-*.jpeg
-*.png
-*.gif
-*.pdf
+# Uploads (keep folder structure, ignore content)
+uploads/*
+!uploads/.gitkeep
 
 # OS Files
 Thumbs.db
