--- a/server/package.json
+++ b/server/package.json
@@ -13,13 +13,17 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
-    "@prisma/client": "^7.0.0",
+    "@prisma/client": "5.10.2",
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.10",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
-    "prisma": "^7.0.0"
+    "prisma": "5.10.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
