--- a/client/package.json
+++ b/client/package.json
@@ -23,6 +23,7 @@
     "ng-zorro-antd": "^18.2.1",
     "ng2-charts": "^6.0.1",
     "rxjs": "~7.8.0",
+    "socket.io-client": "^4.8.1",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.10"
   },
