--- a/server/package.json
+++ b/server/package.json
@@ -23,7 +23,8 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "pg": "^8.16.3",
-    "prisma": "5.10.2"
+    "prisma": "5.10.2",
+    "socket.io": "^4.8.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
