Add Docker deployment support and update documentation

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -12,6 +12,35 @@ services:
       - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
+    networks:
+      - app-network
+
+  server:
+    build: ./server
+    container_name: piatmd-server
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_URL: postgresql://admin:password123@postgres:5432/property_management?schema=public
+      JWT_SECRET: supersecretkey
+      PORT: 3000
+    ports:
+      - "3000:3000"
+    networks:
+      - app-network
+
+  client:
+    build: ./client
+    container_name: piatmd-client
+    depends_on:
+      - server
+    ports:
+      - "80:80"
+    networks:
+      - app-network
 
 volumes:
   postgres_data:
+
+networks:
+  app-network:
